realisation de prevails unitarias